--- a/PokeDuelClient/src/ui/RequestBattlePanel.form
+++ b/PokeDuelClient/src/ui/RequestBattlePanel.form
@@ -26,55 +26,62 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace pref="163" max="32767" attributes="0"/>
+              <EmptySpace pref="183" max="32767" attributes="0"/>
               <Component id="humanBattleButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="180" max="32767" attributes="0"/>
+              <Component id="computerBattleButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="winText" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lossText" min="-2" max="-2" attributes="0"/>
-                                  <Component id="usernameLabel" min="-2" pref="65" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="usersnameText" min="-2" pref="19" max="-2" attributes="0"/>
-                                  <Component id="winCount" min="-2" pref="19" max="-2" attributes="0"/>
-                                  <Component id="lossCount" min="-2" pref="19" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                      </Group>
+                      <Component id="lossText" min="-2" pref="58" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="usersnameText" min="-2" pref="19" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="207" max="-2" attributes="0"/>
-                      <Component id="computerBattleButton" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="winText" min="-2" pref="73" max="-2" attributes="0"/>
+                  <Component id="usernameLabelConstant" min="-2" pref="88" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="222" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="usernameLabel" min="-2" pref="65" max="-2" attributes="0"/>
+                  <Component id="winCount" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="lossCount" min="-2" pref="19" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace pref="230" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="usernameLabel" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
-                  <Component id="usersnameText" alignment="3" min="-2" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="220" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                      <Component id="usersnameText" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lossText" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="usernameLabelConstant" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="usernameLabel" min="-2" pref="20" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
+                              <Component id="winCount" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="winText" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="lossCount" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="winText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="winCount" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lossText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lossCount" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="humanBattleButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="computerBattleButton" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -85,34 +92,6 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="usernameLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Username:  "/>
-      </Properties>
-      <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="usernameLabel"/>
-      </AccessibilityProperties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="winText">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Win:  "/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lossText">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Loss: "/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="winCount">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="0"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lossCount">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="0"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="usersnameText">
       <Properties>
         <Property name="text" type="java.lang.String" value=" "/>
@@ -123,6 +102,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="humanBattleButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/human_button.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Battle Human"/>
       </Properties>
       <Events>
@@ -131,11 +113,45 @@
     </Component>
     <Component class="javax.swing.JButton" name="computerBattleButton">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/computer_button.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Battle Computer"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="computerBattleButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="usernameLabelConstant">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Username:  "/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lossText">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Loss: "/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lossCount">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="0"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="winText">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Wins:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="winCount">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="0"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="usernameLabel">
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="usernameLabel"/>
+        <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+      </AccessibilityProperties>
     </Component>
   </SubComponents>
 </Form>
